--- a/index.html
+++ b/index.html
@@ -86,7 +86,12 @@
         </div>
 
         <div class="analytics-container-2">
-            <div class="analytics-box1"></div>
+            <div class="analytics-box1">
+                <div class="visibility-info">
+                    <p class="info-heading">Visibility</p>
+                    <p class="visibility-range">10 km</p>
+                </div>
+            </div>
             <div class="analytics-box2"></div>
             <div class="analytics-box3"></div>
         </div>
