--- a/index.html
+++ b/index.html
@@ -95,7 +95,18 @@
             <p class="wind">15mph</p>
           </div>
         </div>
-        <div class="analytics-box03"></div>
+        <div class="analytics-box03">
+          <div class="arch-container">
+            <div class="arch"><img class="arch-img" src="images\arch.png" alt="#"></div>
+            <div class="sun-div">
+            <p class="sunrise">Sunrise</p><p class="sunset">Sunset</p>
+            </div>
+            <div class="sun-div2">
+              <p class="sunrise-text"></p><p class="sunset-text"></p>
+            </div>
+            <img class="sun-img" src="images/sun.png" alt="Sun">
+          </div>
+        </div>
       </div>
 
       <div class="analytics-container-2">
