--- a/index.html
+++ b/index.html
@@ -122,7 +122,12 @@
                 <p class="pressure-text"></p>
             </div>
         </div>
-        <div class="analytics-box3"></div>
+        <div class="analytics-box3">
+          <div class="air-quality-info">
+            <p class="air-quality-text">Air Quality</p>
+            <p class="air-quality"></p><p class="air-quality-description"></p>
+          </div>
+        </div>
       </div>
     </div>
     <script src="main.js"></script>
